--- a/.env
+++ b/.env
@@ -1,4 +1,11 @@
-#THEME=https://raw.githubusercontent.com/colineckert/obsidian-things/main/obsidian.css
-#THEME=https://github.com/kepano/obsidian-minimal/blob/master/obsidian.css
-#BASE_THEME=light
+
+SITE_NAME_HEADER=Neutrino Notes
+SITE_BASE_URL=https://neutrinonotes.com
 dgHomeLink=true
+dgPassFrontmatter=false
+dgShowBacklinks=false
+dgShowLocalGraph=false
+dgShowInlineTitle=false
+dgShowFileTree=false
+dgEnableSearch=false
+dgShowToc=false
