--- a/.env
+++ b/.env
@@ -4,7 +4,7 @@ SITE_BASE_URL=https://neutrinonotes.com
 dgHomeLink=true
 dgPassFrontmatter=false
 dgShowBacklinks=false
-dgShowLocalGraph=false
+dgShowLocalGraph=true
 dgShowInlineTitle=false
 dgShowFileTree=false
 dgEnableSearch=false
