--- a/.env
+++ b/.env
@@ -3,7 +3,7 @@ SITE_NAME_HEADER=Neutrino Notes
 SITE_BASE_URL=https://neutrinonotes.com
 dgHomeLink=true
 dgPassFrontmatter=false
-dgShowBacklinks=false
+dgShowBacklinks=true
 dgShowLocalGraph=true
 dgShowInlineTitle=false
 dgShowFileTree=false
