--- a/.env
+++ b/.env
@@ -6,6 +6,6 @@ dgPassFrontmatter=false
 dgShowBacklinks=true
 dgShowLocalGraph=true
 dgShowInlineTitle=true
-dgShowFileTree=false
+dgShowFileTree=true
 dgEnableSearch=false
 dgShowToc=true
