--- a/.env
+++ b/.env
@@ -7,5 +7,5 @@ dgShowBacklinks=true
 dgShowLocalGraph=true
 dgShowInlineTitle=true
 dgShowFileTree=true
-dgEnableSearch=false
+dgEnableSearch=true
 dgShowToc=true
