--- a/.env
+++ b/.env
@@ -1,7 +1,8 @@
-
+THEME=https://raw.githubusercontent.com/vanadium23/obsidian-blackbird-theme/HEAD/theme.css
+BASE_THEME=dark
 SITE_NAME_HEADER=Neutrino Notes
 SITE_BASE_URL=https://neutrinonotes.com
-dgHomeLink=true
+dgHomeLink=false
 dgPassFrontmatter=false
 dgShowBacklinks=true
 dgShowLocalGraph=true
