--- a/.env
+++ b/.env
@@ -2,11 +2,11 @@ THEME=https://raw.githubusercontent.com/vanadium23/obsidian-blackbird-theme/HEAD
 BASE_THEME=dark
 SITE_NAME_HEADER=Neutrino Notes
 SITE_BASE_URL=https://neutrinonotes.com
-dgHomeLink=false
+dgHomeLink=true
 dgPassFrontmatter=false
 dgShowBacklinks=true
 dgShowLocalGraph=true
-dgShowInlineTitle=true
+dgShowInlineTitle=false
 dgShowFileTree=true
 dgEnableSearch=true
 dgShowToc=true
