--- a/.env
+++ b/.env
@@ -1,4 +1,5 @@
-
+THEME=https://raw.githubusercontent.com/davidgolding/obsidian-big-sur-aesthetic/HEAD/theme.css
+BASE_THEME=dark
 SITE_NAME_HEADER=Neutrino Notes
 SITE_BASE_URL=https://neutrinonotes.com
 dgHomeLink=true
