--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-THEME=https://raw.githubusercontent.com/deathau/80s-Neon-for-Obsidian.md/HEAD/theme.css
+THEME=https://raw.githubusercontent.com/chetachiezikeuzor/Yin-and-Yang-Theme/HEAD/obsidian.css
 BASE_THEME=dark
 SITE_NAME_HEADER=Neutrino Notes
 SITE_BASE_URL=https://neutrinonotes.com
