--- a/package.json
+++ b/package.json
@@ -36,8 +36,6 @@
         "markdown-it-footnote": "^3.0.3",
         "markdown-it-mathjax3": "^4.3.1",
         "markdown-it-plantuml": "^1.4.1",
-        "markdown-it-task-checkbox": "^1.0.6",
-        "lucide-static": "^0.90.0",
-        "url-loader": "^4.0.0"
+        "markdown-it-task-checkbox": "^1.0.6"
     }
 }
