--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "license": "ISC",
     "devDependencies": {
         "@11ty/eleventy": "^1.0.2",
+        "browser-sync": "^2.27.11",
         "cross-env": "^7.0.3",
         "npm-run-all": "^4.1.5",
         "sass": "^1.49.9"
